--- a/nosotros.html
+++ b/nosotros.html
@@ -17,7 +17,6 @@
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.1.0/velocity.ui.js"></script>
-    <script src="js/hexagono.js"></script>
 
     <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
@@ -127,11 +126,173 @@
             <li>Comunicación</li>
           </ul>
         </div>
-        <h3 class="text-left">Conoce nuestro organigrama</h3>
-        <img src="img/Organigrama4.png" class="center-block img-responsive" style="width: 600px;">
       </div>
     </div>
 </div>
+
+
+
+
+
+
+<link rel='stylesheet'  href='http://codemaster.comxa.com/css/cs-traveladvisor.css' type='text/css' media='all' />
+<link rel='stylesheet'   href='http://codemaster.comxa.com/css/responsive62d0.css' type='text/css' media='all' />
+
+<div class="container section">
+<div class="wp-traveladvisor">   
+    <ul class="cs-destination-listing destination-fancy" style="margin: 0px;padding-left: 0px;">
+         <li class="facny-view-expand">     
+            <div class="inner-holder">
+                <div class="cs-media">
+                    <figure>
+                        <img src="img/IMG_4255.JPG" style="">                        
+                        <figcaption>
+                            <div class="cs-trips cs-bgcolor"><span> 1 </span></div>
+                            <div class="cs-text cs-location _text">
+                                <div class="cs-location-sec title"><h3>QUIÉNES SOMOS</h3></div>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="over-preview">
+                    <div class="cs-text">
+                        <div class="cs-location-sec">
+                            <h3>QUIÉNES SOMOS</h3>
+                            <span><i class="fa fa-chain-broken"></i></span>
+                        </div>
+                        <p>PAZ PERU, es una institución sin fines de lucro, solidaria, innovadora y líder, que forma parte de la Fundación Paz Suiza.</p>
+                        <ul class="cs-photo-list _list">
+                            <li ><a href="#"><img  src="img/foto1.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/foto2.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/foto3.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/foto4.jpg" alt="" /></a></li>        
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </li>
+
+            <li>     
+            <div class="inner-holder">
+                <div class="cs-media">
+                    <figure>
+                        <img src="img/corazon.jpg" style="height: 490px;">                      
+                        <figcaption>
+                            <div class="cs-trips cs-bgcolor"><span> 2 </span></div>
+                            <div class="cs-text cs-location _text">
+                                <div class="cs-location-sec title"><h3>NUESTRA MISIÓN</h3></div>
+                            </div>
+                        </figcaption>
+                    </figure>
+                </div>
+                <div class="over-preview">
+                    <div class="cs-text">
+                        <div class="cs-location-sec">
+                            <h3>NUESTRA MISIÓN</h3>
+                            <span><i class="fa fa-chain-broken"></i></span>
+                        </div>
+                        <p>Somos una institución comprometida  en mejorar la calidad de vida de las familias más necesitadas de la Región Arequipa, mediante servicios sociales sostenibles en salud, educación, albergues temporales para niños y mujeres que sufren violencia familiar, proyectos de infraestructura, fortalecimiento de organizaciones y generación de ingresos. Por ello contamos con nuestros aliados estratégicos y un equipo altamente profesional  fidelizados a los principios y valores que nos caracterizan.</p>
+                        <ul class="cs-photo-list _list">
+                            <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                            <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>
+                        </ul>
+                   </div>
+                </div>
+            </div>
+            </li>
+
+            <li>     
+                <div class="inner-holder">
+                    <div class="cs-media">
+                        <figure>
+                            <img src="img/cuatro.jpg" style="height: 490px;">                       
+                            <figcaption>
+                                <div class="cs-trips cs-bgcolor"><span>3</span></div>
+                                <div class="cs-text cs-location _text">
+                                    <div class="cs-location-sec title"><h3>NUESTRA VISIÓN</h3></div>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="over-preview">
+                        <div class="cs-text">
+                            <div class="cs-location-sec">
+                                <h3>NUESTRA VISIÓN</h3>
+                                <span><i class="fa fa-chain-broken"></i></span>
+                            </div>
+                            <p>Ser un modelo de gestión para el desarrollo social, referente nacional e internacional. Una Organización consolidada, auto-sostenible en constante crecimiento, con sistemas de excelencia en todas sus unidades y áreas. Contando con servicios y productos de calidad posicionados. Profesionales comprometidos y altamente calificados, contribuye a la prevención de la violencia familiar, formación técnica para jóvenes y generación de infraestructura social.</p>
+                            <ul class="cs-photo-list _list">
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>
+                           </ul>
+                        </div>
+                    </div>
+                </div>
+            </li>
+
+            <li class="valores">     
+                <div class="inner-holder">
+                    <div class="cs-media">
+                        <figure>
+                            <img src="img/person_valores.jpg" style="height: 490px;">                       
+                            <figcaption>
+                                <div class="cs-trips cs-bgcolor"><span>4</span></div>
+                                <div class="cs-text cs-location _text">
+                                    <div class="cs-location-sec title"><h3>NUESTROS VALORES</h3></div>
+                                </div>
+                            </figcaption>
+                        </figure>
+                    </div>
+                    <div class="over-preview">
+                        <div class="cs-text">
+                            <div class="cs-location-sec">
+                                <h3>NUESTROS VALORES</h3>
+                                <span><i class="fa fa-chain-broken"></i></span>
+                            </div>
+                            <div>
+                                <p>1. Comunicación</p>
+                                <p>2. Perseverancia</p>
+                                <p>3. Comunicación</p>
+                                <p>4. Respeto por todos</p>
+                                <p>5. Comunicación</p><p></p>
+                            </div>
+                            <ul class="cs-photo-list _list">
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>         
+                                <li ><a href="#"><img  src="img/1.jpg" alt="" /></a></li>
+                           </ul>
+                        </div>
+                    </div>
+                </div>
+            </li>
+        </ul>
+ </div>
+ </div>
+
+<script type='text/javascript' src='http://codemaster.comxa.com/js/jquery.mobile-menu.min.js'></script>
+<script type='text/javascript' src='http://codemaster.comxa.com/js/functions62.js'></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 <div class="footer2">
     <div class="container">
