--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
             </div>
         </div>
         <div class="col-md-7">
-            <div class="row hidden-xs hidden-sm  _redes">
+            <!-- <div class="row hidden-xs hidden-sm  _redes">
               <ul class="list-redes">
                 <li><div><a href="#"><img src="img/iconos/face.png"></a></div></li>
                 <li><div><a href="#"><img src="img/iconos/twitter.png"></a></div></li>
@@ -61,7 +61,7 @@
               .list-redes img:hover{background-color: rgb(50,57,70); border-radius: 50%;}
               .list-redes {margin-bottom: 0px;  padding: 5px; float: right;}
 
-            </style>
+            </style> -->
             <div id="navbarCollapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="slider.html"><strong>Inicio</strong></a></li>
@@ -104,111 +104,183 @@
     </nav>
 </div>
 <!-- -------------FIN MENU--------------- -->
-<div class="imagen-hero">
-    <div>
-        <div class="container">
-            <div class="row titulo">
-                <h2 ><strong>Contáctanos</strong></h2>
-                <hr>
-                <!-- <div class="col-md-4">
-                    <div class="formulario">
-                    <form name="form1" method="post" action="mailto:contacto@lineadecodigo.com">
-                      <label for="nombre" class="pull-left">Nombre:</label><br><input type="text" name="nombre" id="nombre"><br />
-                      <label for="email" class="pull-left">Email:</label><br><input type="text" name="nombre" id="email"><br />
-                      <label for="email" class="pull-left">Mensaje:</label><br>
-                      <textarea id="opinion" name="opinion"></textarea>
-                      <button type="submit" name="Submit" value="Enviar" class="btn btn-primary text-center">Enviar</button>
-                    </form>
-                </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="contacto">
-                        <div class="col-md-12 col-sm-12 col-xs-12 text-justify">
-                            <div class="pull-left">
-                                <p><i class="fa fa-phone"></i>  (054) 436555</p>
-                            </div>
-                            <div class="pull-left">
-                                <p><i class="fa fa-envelope"></i>  pazperuong@gmail.com</p>
-                            </div>
-                            <div class="pull-left">
-                                <p><i class="fa fa-clock-o"></i>  Lun-Sáb 8:00 - 18:00</p>
-                            </div>
-                            <div class="pull-left _4">
-                                <p><i class="fa fa-map-marker"></i>  Av. Salaverry S/N Urb. Lara</p>
-                            </div>
-                        </div>
-                    </div> -->
-                    <!-- <div class="redes">
-                        <div class="row">
-                            <p><br></p>
-                            <ul class="list-inline">
-                                <li><div><a href="#"><img src="img/iconos/face.png"></a></div></li>
-                                <li><div><a href="#"><img src="img/iconos/twitter.png"></a></div></li>
-                                <li><div><a href="#"><img src="img/iconos/youtub.png"></a></div></li>
-                                <li><div><a href="#"><img src="img/iconos/google.png"></a></div></li>
-                                <li><div><a href="#"><img src="img/iconos/blog.png"></a></div></li>
-                            </ul>
-                        </div>
-                    </div> -->
-                <!-- </div>
-                <div class="col-md-4">
-                    <div class="mapa">
-                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.4084370065566!2d-71.53065201465924!3d-16.45484367268113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9143b5292ca28393%3A0x6b15506b678c651!2sONG+PAZ+PERU!5e0!3m2!1ses!2spe!4v1477591983289" width="330" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
-                </div> -->
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<div class="list-botones">
+<div class="section-contenido">
+<div class="title">
   <div class="container">
-    <div class="row">
-      <div class="col-md-3"></div>
-      <div class="col-md-3">
-        <div class="escríbenos boton"> 
-            <div class="btn-group dropup">
-              <button type="button" class="btn btn-default"><h4>Escríbenos</h4></button>
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-              </ul>
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3">
-        <div class="contactanos boton">
-            <div class="btn-group dropup">
-              <button type="button" class="btn btn-default"><h4>Contátanos</h4></button>
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="caret"></span>
-                <span class="sr-only">Toggle Dropdown</span>
-              </button>
-              <ul class="dropdown-menu">
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-                <li><a href="">cjndcjdsk</a></li>
-              </ul>
-            </div>
-        </div>
-      </div>
-      <div class="col-md-3"></div>
-    </div>
+    <h2 class="text-center"><strong>Contáctanos</strong></h2>
   </div>
 </div>
+<div class="slider-contact">
+  <div class=" container">
+    <div id="custom_carousel" class="carousel slide" data-interval="4000">   <!-- data-ride="carousel" -->
+        <!-- Wrapper for slides -->
+        <div class="col-md-10 columna10">
+        <div class="carousel-inner">
+            <div class="item active">
+                <div class="">
+                    <div class="row">
+                        <div class="top col-md-12 col-xs-12">
+                          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3826.4084370065566!2d-71.53065201465924!3d-16.45484367268113!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9143b5292ca28393%3A0x6b15506b678c651!2sONG+PAZ+PERU!5e0!3m2!1ses!2spe!4v1477591983289" width="100%" height="450" frameborder="0" style="border:0; margin-bottom:-5px; " allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>            
+            </div> 
+            <div class="item _1">
+              <div class="oscuro">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10">
+                        <div class="top col-md-8 col-xs-12 col-md-offset-2">
+                          <div class="fondo1">
+                            <div class="formulario">
+                                <h3 class="text-center"><strong>Escríbenos</strong></h3>
+                                <br>
+                                <form name="form1" method="post" action="mailto:contacto@lineadecodigo.com">
+                                  <label for="nombre" class="pull-left">Nombre:</label><br><input type="text" name="nombre" id="nombre"><br />
+                                  <label for="email" class="pull-left">Email:</label><br><input type="text" name="nombre" id="email"><br />
+                                  <label for="email" class="pull-left">Mensaje:</label><br>
+                                  <textarea id="opinion" name="opinion"></textarea>
+                                </form>
+                                <button type="submit" name="Submit" value="Enviar" class="btn btn-primary text-center">Enviar</button>
+                            </div>
+                          </div>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+              </div>            
+            </div> 
+            <div class="item _2">
+              <div class="oscuro">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-10">
+                          <div class="top col-md-8 col-xs-12 col-md-offset-2">
+                                <div class="contacto">
+                                    <!-- <h3 class="text-center"><strong>Contáctanos</strong></h3> -->
+                                    <br>
+                                    <div class="col-md-4 col-sm-4 col-xs-4 text-center">
+                                      <div class="icono">
+                                        <i class="fa fa-map-marker" aria-hidden="true"></i>
+                                      </div>
+                                      <br>
+                                      <p>Av. Salaverry S/N Urb. Lara</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4 text-center">
+                                      <div class="icono text-center">
+                                        <i  class="fa fa-phone" aria-hidden="true"></i>
+                                      </div>
+                                      <br>
+                                      <p>(054)-436555</p>
+                                    </div>
+                                    <div class="col-md-4 col-sm-4 col-xs-4 text-center">
+                                      <div class="icono">
+                                        <i  class="fa fa-envelope" aria-hidden="true"></i>
+                                      </div>
+                                      <br>
+                                      <p>pazperuong@ gmail.com</p>
+                                    </div>
+                                </div>
+                                <div class="row text-center">
+                                  <div class="col-md-12">
+                                    <hr>
+                                    <h4 class="text-center"><strong>Encuéntranos en:</strong></h4>
+                                    <div class="lista-redes">
+                                      <ul>
+                                        <li><div><a href="#"><i class="fa fa-facebook"></i></a></div></li>
+                                        <li><div><a href="#"><i class="fa fa-twitter"></i></a></div></li>
+                                        <li><div><a href="#"><i class="fa fa-youtube-play"></i></a></div></li>
+                                        <li><div><a href="#"><i class="fa fa-rss"></i></a></div></li>
+                                      </ul>
+                                    </div>
+                                  </div>
+                                </div>
+                          </div>
+                        </div>
+                    </div>
+                </div> 
+              </div>          
+            </div>
+        </div>
+        </div>
+        <!-- End Carousel Inner -->
+          <div class="col-md-2 columna2">
+              <div class="controls draggable ui-widget-content col-md-12 col-xs-12">
+                <ul class="nav ui-widget-header">
+                  <div class="row colum">
+                    <li data-target="#custom_carousel" data-slide-to="0" class="active"><a href="#"><img class="img-thumbnail" src="img/mapa.JPG"><small>Mapa</small></a></li>
+                  </div>
+                  <div class="row colum">
+                    <li data-target="#custom_carousel" data-slide-to="1" class="active"><a href="#"><img class="img-thumbnail" src="img/contact.JPG "><small>Escríbenos</small></a></li>
+                  </div>
+                  <div class="row colum">
+                    <li data-target="#custom_carousel" data-slide-to="2" class="active"><a href="#"><img class="img-thumbnail" src="img/redes.JPG"><small>Contáctanos</small></a></li>
+                  </div>
+                </ul>
+              </div>
+          </div>
+    </div>
+    <!-- End Carousel -->
+  </div>
+</div>
+</div>
+<div class="footer2">
+    <div class="container">
+      <div class="row contacto2">
+        <div class="col-md-4 col-sm-12">
+          <h5>Follow us</h5>
+          <hr>
+          <div>
+            <p style="font-family: 'Titillium Web',serif;">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium voluptatibus deserunt quae unde esse quod nihil aperiam, odio iste quidem officia voluptate deleniti autem cum, ipsam qui earum tenetur, maxime.</p>
+          </div>
+          <div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Menú</h5>
+          <hr>
+          <div class="row">
+            <div class="col-md-6 col-sm-6 col-xs-6 footer_menu">
+              <p><a href="#"><i class="fa fa-chevron-right"></i>About</a></p>
+              <p><a href="#"><i class="fa fa-chevron-right"></i>Blog</a></p>
+              <p><a href="#"><i class="fa fa-chevron-right"></i>Contact</a></p>
+            </div>
+            <div class="col-md-6 col-sm-6 col-xs-6 footer_menu">
+                <p><a href="#"><i class="fa fa-chevron-right"></i>Services</a></p>
+                <p><a href="#"><i class="fa fa-chevron-right"></i>About</a></p>
+                <p><a href="#"><i class="fa fa-chevron-right"></i>Portfolio</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <h5>Contact Info</h5>
+          <hr>
+          <div class="row">
+            <div class="col-md-2 col-sm-2 col-xs-2 text-center">
+                <p><i class="fa fa-phone"></i></p>
+                <p><i class="fa fa-envelope"></i></p>
+                <p><i class="fa fa-clock-o"></i></p>
+                <p><i class="fa fa-map-marker"></i></p>
+            </div>
+            <div class="col-md-10 col-sm-10 col-xs-10 comunic">
+                <p>(054) 436555</p>
+                <p><a class="correo" href="mailto:pazperuong@gmail.com" target="_blank">pazperuong@gmail.com</a></p>
+                <p>Lun-Sáb 8:00 - 18:00</p>
+                <p>Av. Salaverry S/N Urb. Lara
+                </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+</div>
+<div class="footer-final">
+    <div class="container">
+      <p class="text-center"> <small>©2016 - ONG PAZ PERÚ</small></p>
+    </div>
+</div>
 
-<style type="text/css">
-  .list-botones{background: rgb(40,57,70);}
-  .list-botones button{background: rgb(251,65,65);color: white; border:none;}
-</style>
+
 
 
 <div class="section-content">
