--- a/slider.html
+++ b/slider.html
@@ -446,7 +446,7 @@ $(document).ready( function() {
           <h5>Contact Info</h5>
           <hr>
           <div class="row">
-            <div class="col-md-2 col-sm-2 col-xs-2 text-center">
+            <!-- <div class="col-md-2 col-sm-2 col-xs-2 text-center">
                 <p><i class="fa fa-phone"></i></p>
                 <p><i class="fa fa-envelope"></i></p>
                 <p><i class="fa fa-clock-o"></i></p>
@@ -458,6 +458,24 @@ $(document).ready( function() {
                 <p>Lun-Sáb 8:00 - 18:00</p>
                 <p>Av. Salaverry S/N Urb. Lara
                 </p>
+            </div> -->
+            <div class="col-md-12 dl-horizontal ">
+              <div class="row">
+                  <dt class="col-xs-3" style="width: 3em;"><i class="fa fa-phone"></i></dt>
+                  <dd class="col-xs-9" style="margin-left: 30px;">(054) 123456</dd>
+              </div>
+              <div class="row">
+                  <dt class="col-xs-3" style="width: 3em;"><i class="fa fa-envelope"></i></dt>
+                  <dd class="col-xs-9" style="margin-left: 30px;"><a class="correo" href="mailto:pazperuong@gmail.com" target="_blank">pazperuong@gmail.com</a></dd>
+                  </div>
+              <div class="row">
+                  <dt class="col-xs-3" style="width: 3em;"><i class="fa fa-clock-o"></i></dt>
+                  <dd class="col-xs-9" style="margin-left: 30px;">Lun-Sáb 8:00 - 18:00</dd>
+              </div>
+              <div class="row">  
+                    <dt class="col-xs-3" style="width: 3em;"><i class="fa fa-map-marker"></i></dt>
+                    <dd class="col-xs-9" style="margin-left: 30px;">Av. Salaverry s/n Urb. Lara</dd>
+                </div>
             </div>
           </div>
         </div>
