--- a/15 nuevo catalogo-juegaperu/programas-sociales.html
+++ b/15 nuevo catalogo-juegaperu/programas-sociales.html
@@ -413,14 +413,14 @@
 		                        <div class="panel-body">
 		                            <div class="col-md-12 nopadding text-center">
 		                        			<div class="row">
-		                        				<img src="image/merchadising1.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
-		                        				<img src="image/merchadising2.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
-		                        				<img src="image/merchadising3.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
+		                        				<img src="image/merchadising1.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
+		                        				<img src="image/merchadising2.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
+		                        				<img src="image/merchadising3.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
 		                        			</div>
 		                        			<div class="row">
-		                        				<img src="image/merchadising4.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
-		                        				<img src="image/merchadising5.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
-		                        				<img src="image/merchadising6.JPG" alt="" class="img-responsive col-md-4 col-xs-4">
+		                        				<img src="image/merchadising4.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
+		                        				<img src="image/merchadising5.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
+		                        				<img src="image/merchadising6.JPG" alt="" class="img-responsive col-md-4 col-xs-4 ejemplo">
 		                        			</div>
 		                        		</div>
 		                        </div>
