--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                                   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                                 </div>
                             </div>
-                            <h3>INDUS. ALIMENTARIA</h3>
+                            <h3>INDUST. ALIMENTARIA</h3>
                         </div>
                     </div>
                     <div class="col-md-3">
@@ -190,7 +190,7 @@
                                   <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                                 </div>
                             </div>
-                            <h3>CLTIVOS SOSTENIBLES</h3>
+                            <h3>CULTIVOS SOSTENIBLES</h3>
                         </div>
                     </div>
                   </div>  
